--- a/Journey/Journey/Resources/Storyboards/Challenge/Challenge.storyboard
+++ b/Journey/Journey/Resources/Storyboards/Challenge/Challenge.storyboard
@@ -24,6 +24,55 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eGM-ez-60b">
+                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="34" translatesAutoresizingMaskIntoConstraints="NO" id="FbQ-5i-grU">
+                                        <rect key="frame" x="92.5" y="152" width="229" height="421.5"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bgcrsselect" translatesAutoresizingMaskIntoConstraints="NO" id="2A2-47-nwI">
+                                                <rect key="frame" x="0.0" y="0.0" width="229" height="264"/>
+                                            </imageView>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="45" translatesAutoresizingMaskIntoConstraints="NO" id="h4c-Xz-3RB">
+                                                <rect key="frame" x="0.0" y="298" width="229" height="123.5"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="osz-us-8pD" userLabel="나와의 농도를 진하게 만들고 싶다고? 챌린지를 성공하면 끈적해질 수 있어">
+                                                        <rect key="frame" x="0.0" y="0.0" width="229" height="30.5"/>
+                                                        <string key="text">나와의 농도를 진하게 만들고 싶다고?
+챌린지를 성공하면 끈적해질 수 있어</string>
+                                                        <fontDescription key="fontDescription" name="SpoqaHanSansNeo-Regular" family="Spoqa Han Sans Neo" pointSize="12"/>
+                                                        <color key="textColor" name="Black3Text"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7XH-ot-oiO">
+                                                        <rect key="frame" x="0.0" y="75.5" width="229" height="48"/>
+                                                        <color key="backgroundColor" name="Black2"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="48" id="0ga-7K-aqD"/>
+                                                        </constraints>
+                                                        <state key="normal" title="코스 선택하기">
+                                                            <color key="titleColor" name="White"/>
+                                                        </state>
+                                                        <connections>
+                                                            <action selector="touchSelectCourseButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="NZe-l0-2WF"/>
+                                                        </connections>
+                                                    </button>
+                                                </subviews>
+                                                <constraints>
+                                                    <constraint firstAttribute="trailing" secondItem="7XH-ot-oiO" secondAttribute="trailing" id="Ret-qV-uxu"/>
+                                                    <constraint firstItem="osz-us-8pD" firstAttribute="leading" secondItem="h4c-Xz-3RB" secondAttribute="leading" id="XAo-cR-36V"/>
+                                                    <constraint firstAttribute="trailing" secondItem="osz-us-8pD" secondAttribute="trailing" id="zeo-EH-Xf2"/>
+                                                </constraints>
+                                            </stackView>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="FbQ-5i-grU" firstAttribute="centerY" secondItem="eGM-ez-60b" secondAttribute="centerY" id="4TN-fo-WjB"/>
+                                    <constraint firstItem="FbQ-5i-grU" firstAttribute="centerX" secondItem="eGM-ez-60b" secondAttribute="centerX" id="lAv-4k-Ogv"/>
+                                </constraints>
+                            </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="249" verticalCompressionResistancePriority="751" text="오늘의 챌린지" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e4i-6z-CRP">
                                 <rect key="frame" x="24" y="88" width="138" height="24"/>
                                 <constraints>
@@ -128,6 +177,33 @@
                                             <constraint firstAttribute="bottom" secondItem="oxJ-Z4-mvK" secondAttribute="bottom" id="jFc-rc-GBy"/>
                                         </constraints>
                                     </view>
+                                    <stackView hidden="YES" opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="ob3-jj-cZM">
+                                        <rect key="frame" x="0.0" y="134" width="366" height="300"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="yiH-8p-HCq">
+                                                <rect key="frame" x="0.0" y="0.0" width="366" height="150"/>
+                                                <subviews>
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="stamp3confetti1Notch" translatesAutoresizingMaskIntoConstraints="NO" id="6FN-cO-YIK">
+                                                        <rect key="frame" x="0.0" y="0.0" width="183" height="150"/>
+                                                    </imageView>
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="stamp3confetti2Notch" translatesAutoresizingMaskIntoConstraints="NO" id="iQH-oo-6ZX">
+                                                        <rect key="frame" x="183" y="0.0" width="183" height="150"/>
+                                                    </imageView>
+                                                </subviews>
+                                            </stackView>
+                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="qvx-BK-ZZK">
+                                                <rect key="frame" x="0.0" y="150" width="366" height="150"/>
+                                                <subviews>
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="stamp3confetti3Notch" translatesAutoresizingMaskIntoConstraints="NO" id="O9L-AY-9LZ">
+                                                        <rect key="frame" x="0.0" y="0.0" width="183" height="150"/>
+                                                    </imageView>
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="stamp3confetti4Notch" translatesAutoresizingMaskIntoConstraints="NO" id="F5G-kC-jFG">
+                                                        <rect key="frame" x="183" y="0.0" width="183" height="150"/>
+                                                    </imageView>
+                                                </subviews>
+                                            </stackView>
+                                        </subviews>
+                                    </stackView>
                                 </subviews>
                                 <color key="backgroundColor" red="0.96078431372549022" green="0.96078431372549022" blue="0.96078431372549022" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
@@ -135,6 +211,9 @@
                                     <constraint firstItem="pzX-TS-HxP" firstAttribute="centerX" secondItem="pZW-nb-Vls" secondAttribute="centerX" id="EaY-nD-t6E"/>
                                     <constraint firstItem="yo7-Qq-5Ki" firstAttribute="leading" secondItem="pZW-nb-Vls" secondAttribute="leading" id="IOm-XH-gCQ"/>
                                     <constraint firstItem="x9X-ow-MaY" firstAttribute="top" secondItem="pZW-nb-Vls" secondAttribute="top" constant="134" id="O4A-mX-PTE"/>
+                                    <constraint firstAttribute="trailing" secondItem="ob3-jj-cZM" secondAttribute="trailing" id="PB0-jb-yUU"/>
+                                    <constraint firstItem="ob3-jj-cZM" firstAttribute="top" secondItem="pZW-nb-Vls" secondAttribute="top" constant="134" id="R9E-Q0-xqn"/>
+                                    <constraint firstItem="ob3-jj-cZM" firstAttribute="leading" secondItem="pZW-nb-Vls" secondAttribute="leading" id="ZVp-nB-aTf"/>
                                     <constraint firstItem="1rR-xA-DB9" firstAttribute="centerX" secondItem="pZW-nb-Vls" secondAttribute="centerX" id="aSZ-Pi-zrj"/>
                                     <constraint firstItem="x9X-ow-MaY" firstAttribute="leading" secondItem="pZW-nb-Vls" secondAttribute="leading" id="lkv-OQ-ge5"/>
                                     <constraint firstItem="yo7-Qq-5Ki" firstAttribute="centerX" secondItem="pZW-nb-Vls" secondAttribute="centerX" id="n1N-c1-rjB"/>
@@ -197,55 +276,6 @@
                                 <color key="textColor" name="black4Text"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eGM-ez-60b">
-                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
-                                <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="34" translatesAutoresizingMaskIntoConstraints="NO" id="FbQ-5i-grU">
-                                        <rect key="frame" x="92.5" y="152" width="229" height="421.5"/>
-                                        <subviews>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bgcrsselect" translatesAutoresizingMaskIntoConstraints="NO" id="2A2-47-nwI">
-                                                <rect key="frame" x="0.0" y="0.0" width="229" height="264"/>
-                                            </imageView>
-                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="45" translatesAutoresizingMaskIntoConstraints="NO" id="h4c-Xz-3RB">
-                                                <rect key="frame" x="0.0" y="298" width="229" height="123.5"/>
-                                                <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="osz-us-8pD" userLabel="나와의 농도를 진하게 만들고 싶다고? 챌린지를 성공하면 끈적해질 수 있어">
-                                                        <rect key="frame" x="0.0" y="0.0" width="229" height="30.5"/>
-                                                        <string key="text">나와의 농도를 진하게 만들고 싶다고?
-챌린지를 성공하면 끈적해질 수 있어</string>
-                                                        <fontDescription key="fontDescription" name="SpoqaHanSansNeo-Regular" family="Spoqa Han Sans Neo" pointSize="12"/>
-                                                        <color key="textColor" name="Black3Text"/>
-                                                        <nil key="highlightedColor"/>
-                                                    </label>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7XH-ot-oiO">
-                                                        <rect key="frame" x="0.0" y="75.5" width="229" height="48"/>
-                                                        <color key="backgroundColor" name="Black2"/>
-                                                        <constraints>
-                                                            <constraint firstAttribute="height" constant="48" id="0ga-7K-aqD"/>
-                                                        </constraints>
-                                                        <state key="normal" title="코스 선택하기">
-                                                            <color key="titleColor" name="White"/>
-                                                        </state>
-                                                        <connections>
-                                                            <action selector="touchSelectCourseButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="NZe-l0-2WF"/>
-                                                        </connections>
-                                                    </button>
-                                                </subviews>
-                                                <constraints>
-                                                    <constraint firstAttribute="trailing" secondItem="7XH-ot-oiO" secondAttribute="trailing" id="Ret-qV-uxu"/>
-                                                    <constraint firstItem="osz-us-8pD" firstAttribute="leading" secondItem="h4c-Xz-3RB" secondAttribute="leading" id="XAo-cR-36V"/>
-                                                    <constraint firstAttribute="trailing" secondItem="osz-us-8pD" secondAttribute="trailing" id="zeo-EH-Xf2"/>
-                                                </constraints>
-                                            </stackView>
-                                        </subviews>
-                                    </stackView>
-                                </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstItem="FbQ-5i-grU" firstAttribute="centerY" secondItem="eGM-ez-60b" secondAttribute="centerY" id="4TN-fo-WjB"/>
-                                    <constraint firstItem="FbQ-5i-grU" firstAttribute="centerX" secondItem="eGM-ez-60b" secondAttribute="centerX" id="lAv-4k-Ogv"/>
-                                </constraints>
-                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -263,6 +293,7 @@
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="BRn-Of-1A8" secondAttribute="trailing" constant="24" id="Omq-Fi-C4N"/>
                             <constraint firstItem="pZW-nb-Vls" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="QHc-BT-Rqd"/>
                             <constraint firstItem="e4i-6z-CRP" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="24" id="URh-0k-QT2"/>
+                            <constraint firstItem="vGa-mA-gpg" firstAttribute="top" secondItem="ob3-jj-cZM" secondAttribute="bottom" constant="18" id="V4J-2P-TNu"/>
                             <constraint firstItem="pZW-nb-Vls" firstAttribute="top" secondItem="e4i-6z-CRP" secondAttribute="bottom" constant="35" id="Yoy-11-Bdz"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="pZW-nb-Vls" secondAttribute="trailing" constant="24" id="ZUQ-xK-Odc"/>
                             <constraint firstItem="eGM-ez-60b" firstAttribute="bottom" secondItem="vDu-zF-Fre" secondAttribute="bottom" id="amm-OF-xDo"/>
@@ -277,6 +308,7 @@
                     <navigationItem key="navigationItem" id="qaQ-ua-hNL"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
+                        <outlet property="allConfettiStackView" destination="ob3-jj-cZM" id="OFN-a1-DCq"/>
                         <outlet property="challengeDescriptionLabel" destination="pH8-K8-HtA" id="485-8K-7oe"/>
                         <outlet property="challengeSubTitleLabel" destination="pzX-TS-HxP" id="9Ht-9G-G8A"/>
                         <outlet property="challengeTitleLabel" destination="1rR-xA-DB9" id="1HV-y1-k5c"/>
@@ -330,6 +362,10 @@
     <resources>
         <image name="bgcrsselect" width="229" height="264"/>
         <image name="challengeIcon" width="28" height="28"/>
+        <image name="stamp3confetti1Notch" width="163.5" height="132"/>
+        <image name="stamp3confetti2Notch" width="163.5" height="132"/>
+        <image name="stamp3confetti3Notch" width="163.5" height="132"/>
+        <image name="stamp3confetti4Notch" width="163.5" height="132"/>
         <image name="stampSampling" width="124" height="124"/>
         <image name="talkjiOS" width="144" height="164"/>
         <namedColor name="Black1Text">
