--- a/Journey/Journey/Resources/Storyboards/Challenge/Course.storyboard
+++ b/Journey/Journey/Resources/Storyboards/Challenge/Course.storyboard
@@ -3,7 +3,6 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
-        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -17,82 +16,22 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6Na-Wv-A8V">
-                                <rect key="frame" x="0.0" y="44" width="414" height="112"/>
-                                <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="crsGraphic" translatesAutoresizingMaskIntoConstraints="NO" id="KlX-xX-Dl1">
-                                        <rect key="frame" x="24" y="29" width="54" height="54"/>
-                                    </imageView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="Iv8-W2-bhj">
-                                        <rect key="frame" x="86" y="36" width="147" height="40.5"/>
-                                        <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="현재 진행중인 코스" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2a8-BI-vGG">
-                                                <rect key="frame" x="0.0" y="0.0" width="90" height="14.5"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                                <color key="textColor" name="Black2Text"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="뽀득뽀득 세균 퇴치" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D2q-64-g1e">
-                                                <rect key="frame" x="0.0" y="16.5" width="147" height="24"/>
-                                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="20"/>
-                                                <color key="textColor" name="Black1Text"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                        </subviews>
-                                    </stackView>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XV1-xw-72g">
-                                        <rect key="frame" x="345.5" y="52" width="44.5" height="24.5"/>
-                                        <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2일차" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I4i-Q9-vCx">
-                                                <rect key="frame" x="8" y="5" width="28.5" height="14.5"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                                <color key="textColor" name="Black1Text"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                        </subviews>
-                                        <color key="backgroundColor" name="LightPink"/>
-                                        <constraints>
-                                            <constraint firstItem="I4i-Q9-vCx" firstAttribute="leading" secondItem="XV1-xw-72g" secondAttribute="leading" constant="8" id="UPb-My-qdh"/>
-                                            <constraint firstAttribute="bottom" secondItem="I4i-Q9-vCx" secondAttribute="bottom" constant="5" id="UTG-7W-59K"/>
-                                            <constraint firstItem="I4i-Q9-vCx" firstAttribute="top" secondItem="XV1-xw-72g" secondAttribute="top" constant="5" id="nt1-je-A3n"/>
-                                            <constraint firstAttribute="trailing" secondItem="I4i-Q9-vCx" secondAttribute="trailing" constant="8" id="nuM-EV-Njm"/>
-                                        </constraints>
-                                    </view>
-                                </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstItem="Iv8-W2-bhj" firstAttribute="centerY" secondItem="KlX-xX-Dl1" secondAttribute="centerY" id="3FX-r3-sY4"/>
-                                    <constraint firstItem="KlX-xX-Dl1" firstAttribute="centerY" secondItem="6Na-Wv-A8V" secondAttribute="centerY" id="PLE-v8-txk"/>
-                                    <constraint firstItem="XV1-xw-72g" firstAttribute="bottom" secondItem="Iv8-W2-bhj" secondAttribute="bottom" id="PSM-Kf-fGi"/>
-                                    <constraint firstItem="Iv8-W2-bhj" firstAttribute="leading" secondItem="KlX-xX-Dl1" secondAttribute="trailing" constant="8" id="UX0-Z3-I53"/>
-                                    <constraint firstAttribute="height" constant="112" id="dED-UB-oFq"/>
-                                    <constraint firstAttribute="trailing" secondItem="XV1-xw-72g" secondAttribute="trailing" constant="24" id="paK-FP-tUd"/>
-                                    <constraint firstItem="KlX-xX-Dl1" firstAttribute="leading" secondItem="6Na-Wv-A8V" secondAttribute="leading" constant="24" id="yzC-xA-rkt"/>
-                                </constraints>
-                            </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="8at-xF-psI">
-                                <rect key="frame" x="0.0" y="156" width="414" height="740"/>
+                                <rect key="frame" x="0.0" y="44" width="414" height="852"/>
                                 <color key="backgroundColor" red="0.97647058823529409" green="0.97647058823529409" blue="0.97647058823529409" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="6Na-Wv-A8V" secondAttribute="trailing" id="Shi-k3-X90"/>
+                            <constraint firstItem="8at-xF-psI" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="Mth-F0-dEA"/>
                             <constraint firstAttribute="bottom" secondItem="8at-xF-psI" secondAttribute="bottom" id="WE4-bA-7Ke"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="8at-xF-psI" secondAttribute="trailing" id="ZE2-NB-sg0"/>
-                            <constraint firstItem="6Na-Wv-A8V" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="b0H-td-ioB"/>
-                            <constraint firstItem="6Na-Wv-A8V" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="biX-ha-CDZ"/>
-                            <constraint firstItem="8at-xF-psI" firstAttribute="top" secondItem="6Na-Wv-A8V" secondAttribute="bottom" id="dN4-aO-jVm"/>
                             <constraint firstItem="8at-xF-psI" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="r0L-Ye-4h8"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="courseImageVIew" destination="KlX-xX-Dl1" id="uPd-m9-gmO"/>
                         <outlet property="courseTableView" destination="8at-xF-psI" id="VAy-u0-i5v"/>
-                        <outlet property="courseTitleLabel" destination="D2q-64-g1e" id="npX-6y-2g0"/>
-                        <outlet property="dayCountLabel" destination="I4i-Q9-vCx" id="cDm-rR-bAR"/>
-                        <outlet property="dayCountLabelBgView" destination="XV1-xw-72g" id="UAJ-PX-1wf"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -101,16 +40,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="crsGraphic" width="54" height="54"/>
-        <namedColor name="Black1Text">
-            <color red="0.125" green="0.125" blue="0.125" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="Black2Text">
-            <color red="0.25900000333786011" green="0.25900000333786011" blue="0.25900000333786011" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="LightPink">
-            <color red="1" green="0.83099997043609619" blue="0.86299997568130493" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
